# drake

bindings/pydrake/: math_py.cc  perception_py.cc
bindings/pydrake/examples/: _manipulation_station_extra.py  manipulation_station_py.cc
bindings/pydrake/systems/: meshcat_visualizer.py  perception.py
examples/manipulation_station/: BUILD.bazel  clutter_clearing_demo.py  clutter_clearing_main.py  clutter_clearing_perception.py  clutter_clearing_planner.py  manipulation_station.cc  manipulation_station.h  plan_utils.py  print_station_context.py  robot_plans.py  test_xarm7_simulation.py
examples/manipulation_station/test/: manipulation_station_test.cc
manipulation/models/xarm7_description/: BUILD.bazel
manipulation/models/xarm7_description/urdf/: xarm7.urdf  xarm7_with_gripper.urdf  xarm_gripper.urdf
manipulation/models/xarm7_description/urdf/test/: xarm7_test.cc
manipulation/models/ycb/sdf/: 004_sugar_box.sdf  006_mustard_bottle.sdf
perception/: depth_image_to_point_cloud.cc  depth_image_to_point_cloud.h  point_cloud_flags.h
tools/workspace/models/: files.bzl  package.BUILD.bazel  repository.bzl
tutorials/: rendering_multibody_plant.ipynb
