# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/workspace:forward_files.bzl", "forward_files")
load("//tools/workspace/models:files.bzl", "xarm7_description_mesh_files")

package(
    default_visibility = [":__subpackages__"],
)

_XARM_DESCRIPTION_MESHES = forward_files(
    srcs = ["@models//:" + x for x in xarm7_description_mesh_files()],
    dest_prefix = "",
    strip_prefix = "@models//:xarm7_description/",
    visibility = ["//visibility:private"],
)

# === test/ ===

drake_cc_googletest(
    name = "xarm7_test",
    srcs = ["urdf/test/xarm7_test.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

install_data(
    extra_prod_models = _XARM_DESCRIPTION_MESHES
)

add_lint_tests()